# elderly_activity_visualization

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
config/: params.yaml
config/layouts/: elderly_activity_foxglove_panel.json
elderly_activity_visualization/: activity_processor.py  data_fetcher.py  visualization.py
launch/: visualization.launch.py
scripts/: activity_processor.py  activity_visualizer.py  data_fetcher.py  icf_staging_processor.py  icf_staging_visualizer.py  json_files_combiner.py  logo_publisher.py  visualization.py
src/elderly_activity_visualization/: activity_processor.py  data_fetcher.py
test/test_data/: combined_results.json  elderly_good_condition_20241028_stage_345.json  elderly_good_condition_20241029_stage_345.json  elderly_good_condition_20241030_stage_345.json  elderly_notgood_20241031_stage_234.json  elderly_notgood_20241101_stage_234.json  elderly_notgood_20241102_stage_234.json  hemiplegic_good_20241021_stage_234.json  hemiplegic_good_20241022_stage_234.json  hemiplegic_good_20241023_stage_234.json  hemiplegic_notgood_20241024_stage_123.json  hemiplegic_notgood_20241025_stage_123.json  hemiplegic_notgood_20241026_stage_123.json  sample_activity_data.json  scenario_AB  scenario_CD.json
test/test_data/dou_data/: 20241029171127_video_results.json  20241029171144_video_results.json  20241029171157_video_results.json  20241029171158_video_results.json  20241029171159_video_results.json  20241029171200_video_results.json  20241029171201_video_results.json  20241029171203_video_results.json  20241029171206_video_results.json  20241029171207_video_results.json  20241029171209_video_results.json  20241029171215_video_results.json  20241029171216_video_results.json  20241029171217_video_results.json  20241029171218_video_results.json  20241029171219_video_results.json  20241029171220_video_results.json  20241029171221_video_results.json  20241029171222_video_results.json  20241029171223_video_results.json  20241029171224_video_results.json  20241029171225_video_results.json  20241029171226_video_results.json  20241029171227_video_results.json  20241029171228_video_results.json  20241029171229_video_results.json  20241029171231_video_results.json  20241029171232_video_results.json  20241029171233_video_results.json  20241029171234_video_results.json  20241029171235_video_results.json  20241029171237_video_results.json  20241029171331_video_results.json  20241029171343_video_results.json  20241029171347_video_results.json  20241029171402_video_results.json  20241029171406_video_results.json  20241029171419_video_results.json  20241029171425_video_results.json  20241029171426_video_results.json  (+46 more)
